[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/homing_missile.gd" type="Script" id=1]
[ext_resource path="res://assets/vector_space.png" type="Texture" id=2]
[ext_resource path="res://scenes/reacteur_ennemi_big.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/homing_missile_no_activate.png" type="Texture" id=4]
[ext_resource path="res://assets/homing_missile.png" type="Texture" id=5]
[ext_resource path="res://scenes/explosion.tscn" type="PackedScene" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="ConvexPolygonShape2D" id=2]

[node name="HomingMissile" type="Area2D" groups=[
"Ennemis",
"Missile",
]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )

[node name="reacteur_ennemi" parent="." instance=ExtResource( 3 )]
position = Vector2( -61.2951, -0.0453072 )
rotation = -1.5708
scale = Vector2( 0.3, 0.5 )
emitting = false

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = 1.5708
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -5, 0 )
rotation = 1.5708
scale = Vector2( 2.56, 3.92 )
shape = SubResource( 2 )

[node name="explosion" parent="." instance=ExtResource( 6 )]

[node name="TimerActivate" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="TimerHoming" type="Timer" parent="."]
one_shot = true

[node name="TimerDestruction" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="timer_explosion" type="Timer" parent="."]
wait_time = 0.4
one_shot = true
[connection signal="timeout" from="TimerActivate" to="." method="_on_TimerActivate_timeout"]
[connection signal="timeout" from="TimerHoming" to="." method="_on_TimerHoming_timeout"]
[connection signal="timeout" from="TimerDestruction" to="." method="_on_TimerDestruction_timeout"]
[connection signal="timeout" from="timer_explosion" to="." method="_on_timer_explosion_timeout"]
